JSA - Call center
Corrección de vista

--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -152,7 +152,16 @@
     <Compile Include="DTOs\Reportes\InventarioConcepto\InventarioXConceptoDTO.cs" />
     <Compile Include="DTOs\Reportes\InventarioConcepto\RepInventarioXConceptorDTO.cs" />
     <Compile Include="DTOs\Reportes\PeriodoDTO.cs" />
-    <Compile Include="Flujos\Seguridad\MenuDto.cs" />
+    <Compile Include="DTOs\Seguridad\AutenticacionDto.cs" />
+    <Compile Include="DTOs\Seguridad\MenuDto.cs" />
+    <Compile Include="DTOs\Seguridad\RespuestaAutenticacionDto.cs" />
+    <Compile Include="DTOs\Seguridad\RespuestaAutenticacionMobileDto.cs" />
+    <Compile Include="DTOs\Seguridad\RolDto.cs" />
+    <Compile Include="DTOs\Seguridad\UserRol.cs" />
+    <Compile Include="DTOs\Seguridad\UsuarioAplicacionDto.cs" />
+    <Compile Include="DTOs\Seguridad\UsuarioDTO.cs" />
+    <Compile Include="DTOs\Seguridad\UsuarioRolDto.cs" />
+    <Compile Include="DTOs\Seguridad\UsuariosModel.cs" />
     <Compile Include="Servicios\Catalogos\CuentaContableAutorizadoServicio.cs" />
     <Compile Include="Servicios\Equipo\CalculosEquipoTrasporte.cs" />
     <Compile Include="DTOs\EquipoTransporte\MantenimientoDetalleDTO.cs" />
@@ -406,15 +415,6 @@
     <Compile Include="DTOs\Requisicion\RequisicionRevPutDTO.cs" />
     <Compile Include="DTOs\Respuesta\RespuestaDto.cs" />
     <Compile Include="DTOs\Respuesta\RespuestaRequisicionDto.cs" />
-    <Compile Include="Flujos\Seguridad\AutenticacionDto.cs" />
-    <Compile Include="Flujos\Seguridad\RespuestaAutenticacionDto.cs" />
-    <Compile Include="Flujos\Seguridad\RespuestaAutenticacionMobileDto.cs" />
-    <Compile Include="Flujos\Seguridad\RolDto.cs" />
-    <Compile Include="Flujos\Seguridad\UsuarioAplicacionDto.cs" />
-    <Compile Include="Flujos\Seguridad\UsuarioDTO.cs" />
-    <Compile Include="Flujos\Seguridad\UserRol.cs" />
-    <Compile Include="Flujos\Seguridad\UsuarioRolDto.cs" />
-    <Compile Include="Flujos\Seguridad\UsuariosModel.cs" />
     <Compile Include="Flujos\Almacenes.cs" />
     <Compile Include="Flujos\Catalogos.cs" />
     <Compile Include="Flujos\Compras.cs" />
