JSA avance ajustes

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -471,10 +471,12 @@
     <Compile Include="Models\Transporte\TipoUnidadEqTransporteEnum.cs" />
     <Compile Include="Models\Ventas\CajaGeneralCamionetaModel.cs" />
     <Compile Include="Models\Ventas\CajaGeneralModel.cs" />
+    <Compile Include="Models\Ventas\CorteCajaDTO.cs" />
     <Compile Include="Models\Ventas\MovimientosGasCilindros.cs" />
     <Compile Include="Models\Ventas\MovimientosGasModel.cs" />
     <Compile Include="Models\Ventas\VentaCorteAnticipoModel.cs" />
     <Compile Include="Models\Ventas\VentaDTO.cs" />
+    <Compile Include="Models\Ventas\VentasPipaDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -11695,6 +11697,7 @@
     <Content Include="Views\CuentaContable\CuentaContableAutorizado.cshtml" />
     <Content Include="Views\CuentaContable\_CuentasContables.cshtml" />
     <Content Include="Views\Reportes\CuentaConsolidada.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\CamionetaModel.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
