--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -186,6 +186,8 @@
     <!-- Ventas -->
     <add key="GetListaCajaGral" value="api/ventas/buscar/listacajageneral" />
     <add key="GetListaCajaGralId" value="api/ventas/buscar/listacajageneral/" />
+    <add key="GetListaTickets" value="api/ventas/buscar/listatickets/" />
+    
     <add key="GetListaCajaGralCamioneta" value="api/ventas/buscar/listacajageneralcamioneta/" />
     <add key="GetListaCajaGralEstacion" value="api/ventas/buscar/listacajageneralestacion/" />
     <add key="PutLiquidarCajaGral" value="api/ventas/Modifica/liquidarcajageneral" />
@@ -321,6 +323,7 @@
         <add assembly="DevExpress.Printing.v18.2.Core, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
         <add assembly="DevExpress.Web.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
         <add assembly="DevExpress.Web.Mvc5.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.5.2" maxRequestLength="4096" requestValidationMode="4.0" executionTimeout="110" />
