JSA - Avance ajustes

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -194,6 +194,7 @@
     <add key="PutLiquidarCajaGralEst" value="api/ventas/Modifica/liquidarcajageneralest" />
     <add key="PutListaMovGas" value="api/ventas/buscar/listamovimientosgas" />
     <add key="PutListaMovGasCilindros" value="api/ventas/buscar/listamovimientosgascilindros" />
+    <add key="PutLiquidar" value="api/ventas/generar/liquidar/" />    
     <!-- Ventas -->
     <!-- Pedidos -->
     <add key="GetListaPedidos" value="api/pedidos/buscar/listapedidos/" />
@@ -297,6 +298,7 @@
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
   <system.web>
+    <sessionState timeout="20"></sessionState>
     <customErrors defaultRedirect="Error404.cshtml" mode="On">
       <error statusCode="404" redirect="Error404.cshtml" />
     </customErrors>
