JSA - Avance ajustes

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -11698,6 +11698,7 @@
     <Content Include="Views\CuentaContable\_CuentasContables.cshtml" />
     <Content Include="Views\Reportes\CuentaConsolidada.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\CamionetaModel.cshtml" />
+    <Content Include="Views\OrdenCompra\_CB_Ordenes.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
