--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -186,15 +186,16 @@
     <!-- Ventas -->
     <add key="GetListaCajaGral" value="api/ventas/buscar/listacajageneral" />
     <add key="GetListaCajaGralId" value="api/ventas/buscar/listacajageneral/" />
-    <add key="GetListaTickets" value="api/ventas/buscar/listatickets/" />
-    
+    <add key="GetListaTickets" value="api/ventas/buscar/listatickets/" />    
     <add key="GetListaCajaGralCamioneta" value="api/ventas/buscar/listacajageneralcamioneta/" />
     <add key="GetListaCajaGralEstacion" value="api/ventas/buscar/listacajageneralestacion/" />
     <add key="PutLiquidarCajaGral" value="api/ventas/Modifica/liquidarcajageneral" />
     <add key="PutLiquidarCajaGralEst" value="api/ventas/Modifica/liquidarcajageneralest" />
     <add key="PutListaMovGas" value="api/ventas/buscar/listamovimientosgas" />
     <add key="PutListaMovGasCilindros" value="api/ventas/buscar/listamovimientosgascilindros" />
-    <add key="PutLiquidar" value="api/ventas/generar/liquidar/" />    
+    <add key="PutLiquidar" value="api/ventas/generar/liquidar/" />
+    <add key ="GetPuntosVentaLiquidacion" value="api/ventas/buscar/listapuntosventaliquidacion"/>
+    <add key ="GetLiquidacionesDelDia" value="api/ventas/buscar/listaliquidaciones"/>
     <!-- Ventas -->
     <!-- Pedidos -->
     <add key="GetListaPedidos" value="api/pedidos/buscar/listapedidos/" />
