--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -142,6 +142,7 @@
     <add key="GetRequisicionEstatus" value="api/requisicion/buscar/requisicion/estatus" />
     <add key="PostRequisicion" value="api/requisicion/guardar/requisicion" />
     <add key="GetRequisicionesByIdEmpresa" value="api/requisicion/buscar/requisiciones/" />
+    <add key="GetRequisicionesByAlmacenIdEmpresa" value="api/requisicion/buscar/requisicionesalmacenentrada/" />
     <add key="GetRequisicionByNumRequisicion" value="api/requisicion/buscar/requisicion/" />
     <add key="GetRequisicionByNumRequisicionAut" value="api/requisicion/buscar/requisicion/autorizacion/" />
     <add key="PutActulizarRevision" value="api/requisicion/update/requisicion/revision" />
@@ -212,7 +213,7 @@
     <add key="GetListaCargos" value="api/cobranza/buscar/listacargos/" />
     <add key="GetListaCRecuperada" value="api/cobranza/buscar/listacrecuperada/" />
     <add key="GetCargoId" value="api/cobranza/buscar/cargos/" />
-    <add key="PostRegistrarAbono" value="api/cobranza/registrar/abono" />
+    <add key="PostRegistrarAbono" value= "api/cobranza/registrar/abono" />
     <add key="PostRegistrarAbonosLst" value="api/cobranza/registrar/abonos" />
     <add key="PutListaCartera" value="api/cobranza/buscar/carteravencida" />
     <add key="PutCreditoRecuperado" value="api/cobranza/buscar/carterarecuperada" />
