--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -27,6 +27,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="WebApiUrlBase" value="http://localhost:5469/" />
+    <!--<add key="WebApiUrlBase" value="http://localhost:7012/" />-->
     <add key="GuardarLogoEmpresa" value="~/LogosEmpresa" />
     <!--Login-->
     <add key="PostLogin" value="api/seguridad/login" />
@@ -300,7 +301,7 @@
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
   <system.web>
-    <sessionState timeout="20"></sessionState>
+    <sessionState timeout="120"></sessionState>
     <customErrors defaultRedirect="Error404.cshtml" mode="On">
       <error statusCode="404" redirect="Error404.cshtml" />
     </customErrors>
