--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -409,17 +409,23 @@
     <Compile Include="Models\Pedidos\PedidoDetalleDto.cs" />
     <Compile Include="Models\Pedidos\PedidoModel.cs" />
     <Compile Include="Models\Pedidos\RegistrarPedidoModel.cs" />
+    <Compile Include="Models\Reporte\Autoconsumos\AutoConsumoModel.cs" />
     <Compile Include="Models\Reporte\CallCenter\CallCenterDTO.cs" />
     <Compile Include="Models\Reporte\CallCenter\CallCenterModel.cs" />
     <Compile Include="Models\Reporte\Comision\ComisionDTO.cs" />
     <Compile Include="Models\Reporte\CorteCaja\CorteCajaDTO.cs" />
     <Compile Include="Models\Reporte\CorteCaja\CorteCajaModel.cs" />
+    <Compile Include="Models\Reporte\CreditoOtorgado\CreditoOtorgadoModel.cs" />
+    <Compile Include="Models\Reporte\CreditoRecuperado\CreditoRecuperadoDTO.cs" />
+    <Compile Include="Models\Reporte\CreditoXClienteMensual\CreditoXClienteMensualModel.cs" />
+    <Compile Include="Models\Reporte\CreditoXCliente\CreditoXCliente.cs" />
     <Compile Include="Models\Reporte\CuentasConsolodadas\CuentaConsolodadaDTO.cs" />
     <Compile Include="Models\Reporte\CuentasPorPagar\CuentasPorPagarDTO.cs" />
     <Compile Include="Models\Reporte\CuentasPorPagar\CuentasPorPagarModel.cs" />
     <Compile Include="Models\Reporte\DashBoard\AdministracionDTO.cs" />
     <Compile Include="Models\Reporte\DashBoard\AndenDTO.cs" />
     <Compile Include="Models\Reporte\DashBoard\CarteraDTO.cs" />
+    <Compile Include="Models\Reporte\DescuentosXClientes\DescuentosXClientes.cs" />
     <Compile Include="Models\Reporte\GastoPorVehiculo\GastoVehiculoDTO.cs" />
     <Compile Include="Models\Reporte\GastoPorVehiculo\GastoVehiculoModel.cs" />
     <Compile Include="Models\Reporte\HistoricoPrecioVenta\HisotricoPrecioVentaDTO.cs" />
@@ -431,11 +437,16 @@
     <Compile Include="Models\Reporte\OrdenCompra\OrdenCompraModel.cs" />
     <Compile Include="Models\Reporte\OrdenCompra\OrdenCompraRepDTO.cs" />
     <Compile Include="Models\Reporte\RangoDTO.cs" />
+    <Compile Include="Models\Reporte\RendimientoVehicularCamioneta\RendimientoCamionetaDTO.cs" />
+    <Compile Include="Models\Reporte\RendimientoVehicularPipas\RendimientoVehicularPipasModel.cs" />
     <Compile Include="Models\Reporte\RendimientoVehicular\RendimientoVehicularDTO.cs" />
     <Compile Include="Models\Reporte\RendimientoVehicular\RendimientoVehicularModel.cs" />
     <Compile Include="Models\Reporte\Requisicion\RequisicionModel.cs" />
     <Compile Include="Models\Reporte\Requisicion\RequisicionRepDTO.cs" />
     <Compile Include="Models\Reporte\TiposReporteConst.cs" />
+    <Compile Include="Models\Reporte\VentasXPuntoVenta\VentasXPuntoVenta.cs" />
+    <Compile Include="Models\Reporte\Ventas\VentasDTO.cs" />
+    <Compile Include="Models\Reporte\Ventas\VentasModel.cs" />
     <Compile Include="Models\Requisicion\RequisicionAutorizacionDTO.cs" />
     <Compile Include="Models\Requisicion\RequisicionAutorizacionModel.cs" />
     <Compile Include="Models\Requisicion\RequisicionAutPutDTO.cs" />
