--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -8,11 +8,11 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <sectionGroup name="devExpress">
-      <section name="themes" type="DevExpress.Web.ThemesConfigurationSection, DevExpress.Web.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
-      <section name="compression" type="DevExpress.Web.CompressionConfigurationSection, DevExpress.Web.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
-      <section name="settings" type="DevExpress.Web.SettingsConfigurationSection, DevExpress.Web.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
-      <section name="errors" type="DevExpress.Web.ErrorsConfigurationSection, DevExpress.Web.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
-      <section name="resources" type="DevExpress.Web.ResourcesConfigurationSection, DevExpress.Web.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
+      <section name="themes" type="DevExpress.Web.ThemesConfigurationSection, DevExpress.Web.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
+      <section name="compression" type="DevExpress.Web.CompressionConfigurationSection, DevExpress.Web.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
+      <section name="settings" type="DevExpress.Web.SettingsConfigurationSection, DevExpress.Web.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
+      <section name="errors" type="DevExpress.Web.ErrorsConfigurationSection, DevExpress.Web.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
+      <section name="resources" type="DevExpress.Web.ResourcesConfigurationSection, DevExpress.Web.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
     </sectionGroup>
   </configSections>
   <connectionStrings>
@@ -196,8 +196,10 @@
     <add key="PutListaMovGas" value="api/ventas/buscar/listamovimientosgas" />
     <add key="PutListaMovGasCilindros" value="api/ventas/buscar/listamovimientosgascilindros" />
     <add key="PutLiquidar" value="api/ventas/generar/liquidar/" />
-    <add key ="GetPuntosVentaLiquidacion" value="api/ventas/buscar/listapuntosventaliquidacion"/>
-    <add key ="GetLiquidacionesDelDia" value="api/ventas/buscar/listaliquidaciones"/>
+    <add key="PutActualizarTikets" value="api/ventas/modificar/tikets/" />
+    
+    <add key="GetPuntosVentaLiquidacion" value="api/ventas/buscar/listapuntosventaliquidacion" />
+    <add key="GetLiquidacionesDelDia" value="api/ventas/buscar/listaliquidaciones" />
     <!-- Ventas -->
     <!-- Pedidos -->
     <add key="GetListaPedidos" value="api/pedidos/buscar/listapedidos/" />
@@ -214,7 +216,7 @@
     <add key="GetListaCargos" value="api/cobranza/buscar/listacargos/" />
     <add key="GetListaCRecuperada" value="api/cobranza/buscar/listacrecuperada/" />
     <add key="GetCargoId" value="api/cobranza/buscar/cargos/" />
-    <add key="PostRegistrarAbono" value= "api/cobranza/registrar/abono" />
+    <add key="PostRegistrarAbono" value="api/cobranza/registrar/abono" />
     <add key="PostRegistrarAbonosLst" value="api/cobranza/registrar/abonos" />
     <add key="PutListaCartera" value="api/cobranza/buscar/carteravencida" />
     <add key="PutCreditoRecuperado" value="api/cobranza/buscar/carterarecuperada" />
@@ -276,7 +278,7 @@
     <add key="DeleteHistorico" value="api/historico/eleiminar/historicoventas/" />
     <add key="GetJsonConsulta" value="api/historico/consultar/json" />
     <add key="GetYears" value="api/historico/consultar/years" />
-    <add key="GetYearsTotales" value="api/historico/consultar/yearstotales"/> 
+    <add key="GetYearsTotales" value="api/historico/consultar/yearstotales" /> 
     <!-- HistoricoVentas -->
     <!--Reportes-->
     <add key="PostRepoCuentasPorPagar" value="api/reportes/cuentasxpagar" />
@@ -286,16 +288,31 @@
     <add key="PostRepoRequisicion" value="api/reportes/requisicion" />
     <add key="PostOrdenCompra" value="api/reportes/ordencompra" />
     <add key="PostRendimientoVehicular" value="api/reportes/rendimientovehicular" />
+    <add key="PostRendimientoVehicularCamioneta" value="api/reportes/rendimientovehicularCamioneta" />
+    <add key="PostRendimientovehicularPipas" value="api/reportes/rendimientovehicularPipas" />
+    <add key="PostAutoConsumos" value="api/reportes/AutoConsumos" />
+    <add key="PostDescuentosXClientes" value="api/reportes/DescuentosXClientes" />   
+    <add key="PostVentasXPuntoVenta" value="api/reportes/VentasXPuntoVenta" />
+    <add key="PostEquipoDeTransporte" value="api/reportes/EquipoDeTransporte" />
+    <add key="PostCreditoRecuperadoClientes" value="api/reportes/CreditoRecuperadoClientes" />
+    <add key="PostCreditoOtorgadoClientes" value="api/reportes/CreditoOtorgadoClientes" />
+    <add key="PostCreditoXCliente" value="api/reportes/CreditoXCliente" />
+    <add key="PostCreditoXClienteMensual" value="api/reportes/CreditoXClienteMensual" />
+    <add key="GetListaClientesCR" value="api/reportes/ClientesCR" />
+    
+    
+    
     <add key="PostInventarioPorConcepto" value="api/reportes/inventarioxconcepto" />
-    <add key="PostCorteCaja" value="api/reportes/cortecaja"/>
-    <add key="PostGastoXVehiculo" value="api/reportes/gastoxvehiculo"/>
-    <add key="GetDashRemanente" value="api/reportes/dashboard/remanente"/>
+    <add key="PostCorteCaja" value="api/reportes/cortecaja" />
+    <add key="PostGastoXVehiculo" value="api/reportes/gastoxvehiculo" />
+    <add key="GetDashRemanente" value="api/reportes/dashboard/remanente" />
     <add key="GetDashCallCenter" value="api/reportes/dashboard/callcenter" />
     <add key="GetDashAnden" value="api/reportes/dashboard/anden" />
     <add key="GetCartera" value="api/reportes/dashboard/cartera" />
     <add key="GetCajaGeneral" value="api/reportes/dashboard/cajageneral" />
     <add key="PostComisiones" value="api/reportes/comisiones" />
     <add key="PostCuentasConsolodadas" value="api/reportes/cuentasconsolidadas" />
+    <add key="PostVentas" value="api/reportes/ventas" />
     
     <!--Reportes-->
     <add key="vs:EnableBrowserLink" value="false" />
@@ -321,25 +338,25 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2">
       <assemblies>
-        <add assembly="DevExpress.Utils.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-        <add assembly="DevExpress.Data.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-        <add assembly="DevExpress.Web.ASPxThemes.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-        <add assembly="DevExpress.RichEdit.v18.2.Core, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-        <add assembly="DevExpress.Printing.v18.2.Core, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-        <add assembly="DevExpress.Web.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-        <add assembly="DevExpress.Web.Mvc5.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.Utils.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.Data.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.Web.ASPxThemes.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.RichEdit.v18.2.Core, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.Printing.v18.2.Core, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.Web.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.Web.Mvc5.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
         <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.5.2" maxRequestLength="4096" requestValidationMode="4.0" executionTimeout="110" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
-      <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" name="ASPxHttpHandlerModule" />
+      <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" name="ASPxHttpHandlerModule" />
     </httpModules>
     <globalization uiCulture="es" culture="es"></globalization>
     <httpHandlers>
-      <add type="DevExpress.Web.ASPxUploadProgressHttpHandler, DevExpress.Web.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="ASPxUploadProgressHandlerPage.ashx" validate="false" />
-      <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="DX.ashx" validate="false" />
+      <add type="DevExpress.Web.ASPxUploadProgressHttpHandler, DevExpress.Web.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="ASPxUploadProgressHandlerPage.ashx" validate="false" />
+      <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="DX.ashx" validate="false" />
     </httpHandlers>
   </system.web>
   <system.webServer>
@@ -347,7 +364,7 @@
       <remove name="FormsAuthentication" />
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
-      <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" name="ASPxHttpHandlerModule" />
+      <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" name="ASPxHttpHandlerModule" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
@@ -355,8 +372,8 @@
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-      <add type="DevExpress.Web.ASPxUploadProgressHttpHandler, DevExpress.Web.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="ASPxUploadProgressHandlerPage.ashx" name="ASPxUploadProgressHandler" preCondition="integratedMode" />
-      <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="DX.ashx" name="ASPxHttpHandlerModule" preCondition="integratedMode" />
+      <add type="DevExpress.Web.ASPxUploadProgressHttpHandler, DevExpress.Web.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="ASPxUploadProgressHandlerPage.ashx" name="ASPxUploadProgressHandler" preCondition="integratedMode" />
+      <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="DX.ashx" name="ASPxHttpHandlerModule" preCondition="integratedMode" />
     </handlers>
     <security>
       <requestFiltering>
