--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -8,11 +8,11 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <sectionGroup name="devExpress">
-      <section name="themes" type="DevExpress.Web.ThemesConfigurationSection, DevExpress.Web.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
-      <section name="compression" type="DevExpress.Web.CompressionConfigurationSection, DevExpress.Web.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
-      <section name="settings" type="DevExpress.Web.SettingsConfigurationSection, DevExpress.Web.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
-      <section name="errors" type="DevExpress.Web.ErrorsConfigurationSection, DevExpress.Web.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
-      <section name="resources" type="DevExpress.Web.ResourcesConfigurationSection, DevExpress.Web.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
+      <section name="themes" type="DevExpress.Web.ThemesConfigurationSection, DevExpress.Web.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
+      <section name="compression" type="DevExpress.Web.CompressionConfigurationSection, DevExpress.Web.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
+      <section name="settings" type="DevExpress.Web.SettingsConfigurationSection, DevExpress.Web.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
+      <section name="errors" type="DevExpress.Web.ErrorsConfigurationSection, DevExpress.Web.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
+      <section name="resources" type="DevExpress.Web.ResourcesConfigurationSection, DevExpress.Web.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
     </sectionGroup>
   </configSections>
   <connectionStrings>
@@ -135,9 +135,9 @@
     <add key="PostRegistraEgreso" value="api/catalogos/registra/egreso" />
     <add key="PutEliminaEgreso" value="api/catalogos/elimina/egreso/" />
     <add key="PostRegistraCuentaContableAutorizado" value="api/catalogos/registra/cuenta/contableautorizado" />
-    <add key="PutModificaCuentaContableAutorizado" value="api/catalogos/modifica/cuenta/contableautorizado" /> 
+    <add key="PutModificaCuentaContableAutorizado" value="api/catalogos/modifica/cuenta/contableautorizado" />
     <add key="GetListaCuentasContablesAutorizado" value="api/catalogos/consulta/cuentas/contablesautorizado" />
-    <add key="GetCuentaContableAutorizado" value="api/catalogos/consulta/cuenta/contableautorizado/" />  
+    <add key="GetCuentaContableAutorizado" value="api/catalogos/consulta/cuenta/contableautorizado/" />
     <!--Catalogos-->
     <!--Requisicion-->
     <add key="GetRequisicionEstatus" value="api/requisicion/buscar/requisicion/estatus" />
@@ -188,7 +188,7 @@
     <!-- Ventas -->
     <add key="GetListaCajaGral" value="api/ventas/buscar/listacajageneral" />
     <add key="GetListaCajaGralId" value="api/ventas/buscar/listacajageneral/" />
-    <add key="GetListaTickets" value="api/ventas/buscar/listatickets/" />    
+    <add key="GetListaTickets" value="api/ventas/buscar/listatickets/" />
     <add key="GetListaCajaGralCamioneta" value="api/ventas/buscar/listacajageneralcamioneta/" />
     <add key="GetListaCajaGralEstacion" value="api/ventas/buscar/listacajageneralestacion/" />
     <add key="PutLiquidarCajaGral" value="api/ventas/Modifica/liquidarcajageneral" />
@@ -197,7 +197,7 @@
     <add key="PutListaMovGasCilindros" value="api/ventas/buscar/listamovimientosgascilindros" />
     <add key="PutLiquidar" value="api/ventas/generar/liquidar/" />
     <add key="PutActualizarTikets" value="api/ventas/modificar/tikets/" />
-    
+
     <add key="GetPuntosVentaLiquidacion" value="api/ventas/buscar/listapuntosventaliquidacion" />
     <add key="GetLiquidacionesDelDia" value="api/ventas/buscar/listaliquidaciones" />
     <!-- Ventas -->
@@ -278,7 +278,7 @@
     <add key="DeleteHistorico" value="api/historico/eleiminar/historicoventas/" />
     <add key="GetJsonConsulta" value="api/historico/consultar/json" />
     <add key="GetYears" value="api/historico/consultar/years" />
-    <add key="GetYearsTotales" value="api/historico/consultar/yearstotales" /> 
+    <add key="GetYearsTotales" value="api/historico/consultar/yearstotales" />
     <!-- HistoricoVentas -->
     <!--Reportes-->
     <add key="PostRepoCuentasPorPagar" value="api/reportes/cuentasxpagar" />
@@ -291,7 +291,7 @@
     <add key="PostRendimientoVehicularCamioneta" value="api/reportes/rendimientovehicularCamioneta" />
     <add key="PostRendimientovehicularPipas" value="api/reportes/rendimientovehicularPipas" />
     <add key="PostAutoConsumos" value="api/reportes/AutoConsumos" />
-    <add key="PostDescuentosXClientes" value="api/reportes/DescuentosXClientes" />   
+    <add key="PostDescuentosXClientes" value="api/reportes/DescuentosXClientes" />
     <add key="PostVentasXPuntoVenta" value="api/reportes/VentasXPuntoVenta" />
     <add key="PostEquipoDeTransporte" value="api/reportes/EquipoDeTransporte" />
     <add key="PostCreditoRecuperadoClientes" value="api/reportes/CreditoRecuperadoClientes" />
@@ -299,9 +299,9 @@
     <add key="PostCreditoXCliente" value="api/reportes/CreditoXCliente" />
     <add key="PostCreditoXClienteMensual" value="api/reportes/CreditoXClienteMensual" />
     <add key="GetListaClientesCR" value="api/reportes/ClientesCR" />
-    
-    
-    
+
+
+
     <add key="PostInventarioPorConcepto" value="api/reportes/inventarioxconcepto" />
     <add key="PostCorteCaja" value="api/reportes/cortecaja" />
     <add key="PostGastoXVehiculo" value="api/reportes/gastoxvehiculo" />
@@ -313,15 +313,16 @@
     <add key="PostComisiones" value="api/reportes/comisiones" />
     <add key="PostCuentasConsolodadas" value="api/reportes/cuentasconsolidadas" />
     <add key="PostVentas" value="api/reportes/ventas" />
-    
+
     <!--Reportes-->
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
   <system.web>
     <sessionState timeout="120"></sessionState>
-    <customErrors defaultRedirect="Error404.cshtml" mode="On">
-      <error statusCode="404" redirect="Error404.cshtml" />
-    </customErrors>
+    <customErrors mode="Off"  />
+    <!--<customErrors mode="Off" defaultRedirect="Error" redirectMode="ResponseRewrite">-->
+    <!--<error redirect="Shared/Error404" statusCode="404" />
+    </customErrors>-->
     <pages validateRequest="true" clientIDMode="Predictable">
       <controls>
         <add assembly="System.Web.Mvc, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" namespace="System.Web.Mvc" tagPrefix="mvc" />
@@ -336,27 +337,27 @@
       </namespaces>
     </pages>
     <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.5.2">
+   <compilation debug="true" targetFramework="4.5.2">
       <assemblies>
-        <add assembly="DevExpress.Utils.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-        <add assembly="DevExpress.Data.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-        <add assembly="DevExpress.Web.ASPxThemes.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-        <add assembly="DevExpress.RichEdit.v18.2.Core, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-        <add assembly="DevExpress.Printing.v18.2.Core, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-        <add assembly="DevExpress.Web.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-        <add assembly="DevExpress.Web.Mvc5.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.Utils.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.Data.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.Web.ASPxThemes.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.RichEdit.v18.2.Core, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.Printing.v18.2.Core, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.Web.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.Web.Mvc5.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
         <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.5.2" maxRequestLength="4096" requestValidationMode="4.0" executionTimeout="110" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
-      <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" name="ASPxHttpHandlerModule" />
+      <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" name="ASPxHttpHandlerModule" />
     </httpModules>
     <globalization uiCulture="es" culture="es"></globalization>
-    <httpHandlers>
-      <add type="DevExpress.Web.ASPxUploadProgressHttpHandler, DevExpress.Web.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="ASPxUploadProgressHandlerPage.ashx" validate="false" />
-      <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="DX.ashx" validate="false" />
+  <httpHandlers>
+      <add type="DevExpress.Web.ASPxUploadProgressHttpHandler, DevExpress.Web.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="ASPxUploadProgressHandlerPage.ashx" validate="false" />
+      <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="DX.ashx" validate="false" />
     </httpHandlers>
   </system.web>
   <system.webServer>
@@ -364,7 +365,7 @@
       <remove name="FormsAuthentication" />
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
-      <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" name="ASPxHttpHandlerModule" />
+      <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" name="ASPxHttpHandlerModule" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
@@ -372,8 +373,8 @@
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-      <add type="DevExpress.Web.ASPxUploadProgressHttpHandler, DevExpress.Web.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="ASPxUploadProgressHandlerPage.ashx" name="ASPxUploadProgressHandler" preCondition="integratedMode" />
-      <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v18.2, Version=18.2.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="DX.ashx" name="ASPxHttpHandlerModule" preCondition="integratedMode" />
+      <add type="DevExpress.Web.ASPxUploadProgressHttpHandler, DevExpress.Web.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="ASPxUploadProgressHandlerPage.ashx" name="ASPxUploadProgressHandler" preCondition="integratedMode" />
+      <add type="DevExpress.Web.ASPxHttpHandlerModule, DevExpress.Web.v18.2, Version=18.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="DX.ashx" name="ASPxHttpHandlerModule" preCondition="integratedMode" />
     </handlers>
     <security>
       <requestFiltering>
@@ -463,4 +464,5 @@
       <add type="DevExtreme" />
     </resources>
   </devExpress>
+
 </configuration>
