--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/packages.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
+  <!--<package id="EntityFramework" version="6.2.0" targetFramework="net452" />-->
+  <!--<package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="bootstrap" version="3.3.0" targetFramework="net452" />
   <package id="Bootstrap.DateTimePicker" version="0.0.11" targetFramework="net452" />
   <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.17.45" targetFramework="net452" />
+  <package id="DevExpress.Data" version="18.2.7" targetFramework="net452" />
   <package id="Echovoice.JSON" version="2.0.15151.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="EntityFramework.es" version="6.1.3" targetFramework="net452" />
@@ -70,5 +72,5 @@
   <package id="System.Net.Http" version="4.3.4" targetFramework="net452" />
   <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net452" />
   <package id="Twitter.Bootstrap" version="1.1.0" targetFramework="net452" />
-  <package id="WebGrease" version="1.5.2" targetFramework="net452" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net452" />-->
 </packages>
