--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -166,6 +166,7 @@
     <Compile Include="DTOs\Reportes\Ventas\VentasDTO.cs" />
     <Compile Include="DTOs\Requisicion\RequisicionDTO.cs" />
     <Compile Include="DTOs\Seguridad\AutenticacionDto.cs" />
+    <Compile Include="DTOs\Seguridad\CoordenadasDTO.cs" />
     <Compile Include="DTOs\Seguridad\MenuDto.cs" />
     <Compile Include="DTOs\Seguridad\RespuestaAutenticacionDto.cs" />
     <Compile Include="DTOs\Seguridad\RespuestaAutenticacionMobileDto.cs" />
