Ajustes edicion de locaciones clientes

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -11744,6 +11744,20 @@
     <Content Include="Views\Reportes\CreditoXClienteMensualPartial.cshtml" />
     <Content Include="Views\Reportes\CreditoXCliente.cshtml" />
     <Content Include="Views\Reportes\ControlDeAsistenciaPartial.cshtml" />
+    <Content Include="Views\Reportes\AutoConsumos.cshtml" />
+    <Content Include="Views\Reportes\CreditoOtorgado.cshtml" />
+    <Content Include="Views\Reportes\CreditoOtorgadoPartial.cshtml" />
+    <Content Include="Views\Reportes\CreditoRecuperado.cshtml" />
+    <Content Include="Views\Reportes\CreditoRecuperadoPartial.cshtml" />
+    <Content Include="Views\Reportes\CreditoXClienteMensual.cshtml" />
+    <Content Include="Views\Reportes\DescuentosXClientes.cshtml" />
+    <Content Include="Views\Reportes\DetalleCreditoOtorgado.cshtml" />
+    <Content Include="Views\Reportes\DetalleCreditoRecuperado.cshtml" />
+    <Content Include="Views\Reportes\DetalleCreditoXCliente.cshtml" />
+    <Content Include="Views\Reportes\EquipoDeTransporte.cshtml" />
+    <Content Include="Views\Reportes\RendimientoVehicularCamionetas.cshtml" />
+    <Content Include="Views\Reportes\Ventas.cshtml" />
+    <Content Include="Views\Reportes\VentasXPuntoVenta.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
