--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
@@ -10,11 +10,11 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-DS.MainModule-20180716112358.mdf;Initial Catalog=aspnet-DS.MainModule-20180716112358;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <!--<add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Sagas.MainModule;Integrated Security=true;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ConnectionString" connectionString="data source=localhost;initial catalog=Sagas.MainModule;Integrated Security=true;MultipleActiveResultSets=True;App=EntityFramework" />-->
+    <add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Sagas.MainModule;Integrated Security=true;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ConnectionString" connectionString="data source=localhost;initial catalog=Sagas.MainModule;Integrated Security=true;MultipleActiveResultSets=True;App=EntityFramework" />
    
-    <add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.13;initial catalog=SagasN.MainModule;user id=sa;password=Nts.682;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ConnectionString" connectionString="data source=192.168.0.13;initial catalog=SagasN.MainModule;user id=sa;password=Nts.682;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework" /> 
+    <!--<add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.13;initial catalog=SagasN.MainModule;user id=sa;password=Nts.682;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ConnectionString" connectionString="data source=192.168.0.13;initial catalog=SagasN.MainModule;user id=sa;password=Nts.682;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework" />--> 
 
     <!--<add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=97.74.232.9;initial catalog=Sagas.MainModule;user id=sa;password=X27zaxac!;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="ConnectionString" connectionString="data source=97.74.232.9;initial catalog=Sagas.MainModule;user id=sa;password=X27zaxac!;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework" />-->
@@ -23,6 +23,8 @@
     <!--URL del WebApp-->
     <add key="WebAppURL" value="http://localhost:57857" />
     <add key="WebApi" value="http://localhost:5469" />
+    <!--<add key="WebAppURL" value="http://localhost:80" />
+    <add key="WebApi" value="http://localhost:7012" />-->
     <add key="GuardarLogoEmpresa" value="~/LogosEmpresa" />
     <add key="RutaTemporal" value="~/App_Data" />
     <!--URL del WebApp-->
@@ -42,6 +44,8 @@
     <add key="JWT_SECRET_KEY" value="Xnb0vbcDdIPrjhqel0YHTibiM2MU8ftO" />
     <add key="JWT_AUDIENCE_TOKEN" value="http://localhost:5469" />
     <add key="JWT_ISSUER_TOKEN" value="http://localhost:5469" />
+    <!--<add key="JWT_AUDIENCE_TOKEN" value="http://localhost:7012" />
+    <add key="JWT_ISSUER_TOKEN" value="http://localhost:7012" />-->
     <add key="JWT_EXPIRE_MINUTES" value="30" />
     <!--GENERAR JWT TOKEN-->
 
