--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -26,7 +26,7 @@
     <add key="webpages:Enabled" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="WebApiUrlBase" value="http://localhost:5469/" />
+    <add key="WebApiUrlBase" value="http://97.74.232.9:7012/" />
     <!--<add key="WebApiUrlBase" value="http://localhost:7012/" />-->
     <add key="GuardarLogoEmpresa" value="~/LogosEmpresa" />
     <!--Login-->
