--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -26,10 +26,10 @@
     <add key="webpages:Enabled" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="WebApiUrlBase" value="http://97.74.232.9:7012/" />
-    <!--<add key="WebApiUrlBase" value="http://localhost:7012/" />-->
-    <add key="GuardarLogoEmpresa" value="~/LogosEmpresa" />
-    <!--Login-->
+    <!--<add key="WebApiUrlBase" value="http://97.74.232.9:7012/" />-->
+    <add key="WebApiUrlBase" value="http://localhost:5469/" />
+    <!--<add key="GuardarLogoEmpresa" value="~/LogosEmpresa" />-->
+    <!--  Login -->
     <add key="PostLogin" value="api/seguridad/login" />
     <add key="GetListaEmpresasLogin" value="api/catalogos/empresas/listaempresaslogin" />
     <!--Login-->
@@ -196,9 +196,12 @@
     <add key="PutListaMovGas" value="api/ventas/buscar/listamovimientosgas" />
     <add key="PutListaMovGasCilindros" value="api/ventas/buscar/listamovimientosgascilindros" />
     <add key="PutLiquidar" value="api/ventas/generar/liquidar/" />
-    <add key="PutActualizarTikets" value="api/ventas/modificar/tiket" />
-    
+    <add key="PutActualizarTikets" value="api/ventas/modificar/tiket" />    
     <add key="GetPuntosVentaLiquidacion" value="api/ventas/buscar/listapuntosventaliquidacion" />
+    <add key="GetTicketEdit" value="api/ventas/buscar/ticket/" />
+    <add key="PutActualizarTiket" value="api/ventas/modificar/venta" />
+    <add key="PutActualizarTiketDetalle" value="api/ventas/modificar/ventadetalle" />
+    <add key="PutEliminarTikets" value="api/ventas/borrar/ticket/" />
     <add key="GetLiquidacionesDelDia" value="api/ventas/buscar/listaliquidaciones" />
     <!-- Ventas -->
     <!-- Pedidos -->
