--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
@@ -13,15 +13,14 @@
     <!--<add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=97.74.232.9\KONSILIO;initial catalog=Sagas.MainModule;Integrated Security=true;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="ConnectionString" connectionString="data source=97.74.232.9\KONSILIO;initial catalog=Sagas.MainModule;Integrated Security=true;MultipleActiveResultSets=True;App=EntityFramework" />-->
 
-    <add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=97.74.232.9\KONSILIO;initial catalog=Sagas.MainModule;user id=sagasapp;password=UMf85ybCAoG8;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ConnectionString" connectionString="data source=97.74.232.9\KONSILIO;initial catalog=Sagas.MainModule;user id=sagasapp;password=UMf85ybCAoG8;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework" />
-
+    <!--<add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=97.74.232.9\KONSILIO;initial catalog=Sagas.MainModule;user id=sagasapp;password=UMf85ybCAoG8;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ConnectionString" connectionString="data source=97.74.232.9\KONSILIO;initial catalog=Sagas.MainModule;user id=sagasapp;password=UMf85ybCAoG8;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework" />-->
 
     <!--<add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.13;initial catalog=SagasN.MainModule;user id=sagasapp;password=UMf85ybCAoG8;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="ConnectionString" connectionString="data source=192.168.0.13;initial catalog=SagasN.MainModule;user id=sagasapp;password=UMf85ybCAoG8;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework" />--> 
 
-    <!--<add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=neoteckags.fortiddns.com,14333;initial catalog=Sagas.MainModule;user id=sa;password=.x27zaxac;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ConnectionString" connectionString="data source=neoteckags.fortiddns.com,14333;initial catalog=Sagas.MainModule;user id=sa;password=.x27zaxac;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework" />-->
+    <add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=neoteckags.fortiddns.com,14333;initial catalog=Sagas.MainModule;user id=sa;password=.x27zaxac;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ConnectionString" connectionString="data source=neoteckags.fortiddns.com,14333;initial catalog=Sagas.MainModule;user id=sa;password=.x27zaxac;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework" />
   </connectionStrings>
   <appSettings>
     <!--URL del WebApp-->
@@ -51,7 +50,11 @@
     <!--<add key="JWT_AUDIENCE_TOKEN" value="http://localhost:7012" />
     <add key="JWT_ISSUER_TOKEN" value="http://localhost:7012" />-->
     <add key="JWT_EXPIRE_MINUTES" value="30" />
-    <add key="version" value="1.0.20200416" />
+    <add key="version" value="1.0.2.1" />
+    <add key="Disponible" value="1" /> <!--Neoteck-->
+    <!--<add key="Disponible" value="http://sagasapi.ddns.net:7012/" />-->
+    <add key="gmg" value="api/seguridad/disponible" />
+
     <!--GENERAR JWT TOKEN-->
 
     <!--TIMER GLOBAL-->
